<resources>
    <string name="app_name">Ti\'Aires</string>
    <string name="app_subtitle">Geocaching Tours</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">Login</string>
    <string name="save">Save</string>
    <string name="notes_input">Notes:</string>
    <string name="found">Found</string>
    <string name="dnf">DNF</string>
    <string name="notes_hint">Add your notes here</string>
    <string name="failed_login_message">Login failed, please check your username and password and try again.</string>
    <string name="login_button">Login to geocaching.com</string>
    <string name="logout_button">Logout from geocaching.com</string>
    <string name="preference_file_key">tiaires_preference_file</string>
    <string name="authentication_cookie_key">AuthCookie</string>
    <string name="tour_folder">Tours</string>
    <string name="nothing_to_show">Nothing show.\nPlease create a tour to view it.\n\n(better than staying home!)</string>
    <string name="current_geo_cache_extra">currentGeoCache</string>
    <string name="password_tag">Password</string>
    <string name="username_tag">Username or Email</string>
    <string name="needs_maintenance">Needs Maintenance</string>
    <string name="found_trackable">Found Trackable</string>
    <string name="favourite_point">Favourite Point</string>
    <string name="dropped_trackable">Dropped Trackable</string>
    <string-array name="geo_cache_visit_options">
        <item>Not Found</item>
        <item>Found</item>
        <item>DNF</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="reload_tour">Reload Tour</string>
    <string name="create_tour">Create Tour</string>
    <string name="getting_your_tour">Getting your tour.</string>

    <string name="coordinates_format">geo:0,0?q=%f,0%f</string>
    <string name="geo_cache_codes">Geocache codes:</string>
    <string name="tour_name">Tour name</string>
    <string name="take_new_photo">Take New Photo</string>
    <string name="show_geo_cache_photo">Show Photo</string>
    <string name="delete_geo_cache_photo">Delete Photo</string>

    <string name="user_location_permission_not_granted">Please grant location permission!</string>
    <string name="user_location_permission_explanation">We need to have your location to show you where you are on the map.</string>
    <string name="navigation_guidance_day">blablabla</string>
    <string name="tap_on_marker_instruction">Tap on a marker</string>
    <string name="geo_cache_description_box">D: %s, T: %s, Favs: %s</string>
    <string name="go_to_geocaching_app">Go To Geocaching App</string>
    <string name="lines">See Lines</string>
    <string name="full_tour_distance">Full distance in tour is: %.0f %s</string>
    <string name="remaining_tour_distance">Remaining distance in tour is: %.0f %s</string>
    <string name="dash">\u0020-\u0020</string>
    <string name="geo_cache_dif_ter">D/T: %1$s/%2$s</string>
    <string name="geo_cache_size">Size: %1$s</string>
    <string name="geo_cache_has_hint">&#160;- HINT</string>
    <string name="geo_cache_has_no_hint">&#160;- &lt;font color=\'#CF2A27\'>NO HINT&lt;/font></string>
    <string name="geo_cache_favs">❤ %1$d</string>
    <string name="square">■</string>
    <string name="dnf_risk">&#160;- &lt;font color=\'#CF2A27\'>%1$s&lt;/font></string>
    <string name="password_placeholder">aaaaaaaaaaaa</string>
    <string name="authentication">Authentication</string>
    <string name="save_changes">Save Changes</string>
    <string name="title_activity_multi_cache_detail">MultiCacheDetailActivity</string>
    <string name="tab_text_1">Details</string>
    <string name="tab_text_2">Waypoints</string>
    <string name="waypoint_name_hint">Name</string>
    <string name="waypoint_coordinates_hint">Waypoint Coordinates</string>
    <string name="waypoint_note">Note:</string>
    <string name="delete_waypoint">Delete Waypoint</string>
    <string name="geocache_code">Enter the code for a new geocache here</string>

</resources>
